--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.1.1"
+    "@astrojs/svelte": "^4.0.2",
+    "astro": "^3.1.1",
+    "fuse.js": "^6.6.2",
+    "svelte": "^4.2.1"
   }
 }
